--- a/src/input.css
+++ b/src/input.css
@@ -11,3 +11,7 @@
 .header--content::before {
   clip-path: polygon(37.5% 0%, 100% 0%, 100% 100%, 25% 100%);
 }
+
+.turmas--picture {
+  clip-path: polygon(17% 0%, 100% 0%, 100% 100%, 0% 100%);
+}
