--- a/input.css
+++ b/input.css
@@ -22,3 +22,33 @@
 .teacher {
   clip-path: polygon(17% 0%, 100% 0%, 83% 100%, 0% 100%);
 }
+
+/* Slideshow */
+.mySlides {
+  display: none;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
