fix position gallery for teachers

--- a/output.css
+++ b/output.css
@@ -2808,6 +2808,10 @@ video {
     width: 490px;
   }
 
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
   .lg\:justify-end {
     justify-content: flex-end;
   }
